[package]
name = "triangle"
version = "0.1.0"
authors = ["Louis Quinnell <_@ziorobo.co>"]
edition = "2018"

[lib]
path = "./src/engine/lib.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"
js-sys = "0.3.55"
ultraviolet = "0.8.1"
console_error_panic_hook = "0.1.6"
web-sys = {version = "0.3.55", features = ["console"]}

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = true
